--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Vite App</title>
+
+        <meta name="title" content="silence">
+        <meta name="author" content="lhlyu">
+        <meta name="subject" content="收藏管理">
+        <meta name="description" content="通过issues来管理自己的收藏">
+        <meta name="keywords" content="vite vue3 typescript">
+        <meta name="language" content="zh-cn">
+        <meta name="abstract" content="主要用于收集自己平时遇到的认为好的库和灵感，方便查找">
+        <meta name="robots" content="none">
+
+        <title>silence</title>
     </head>
     <body>
         <div id="app"></div>
